친구목록 | 검색 페이지

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>kakao</title>
+  <title>Document</title>
   <link
     rel="stylesheet"
     href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
@@ -26,63 +26,41 @@
       </span>
     </header>
     <div class="ko__title">
-      <span>Friends</span>
+      <span>Chats</span>
       <span>
         <i class="fas fa-search"></i>
         <i class="fas fa-cog"></i>
       </span>
     </div>
     <div class="main">
-      <div class="my">
-        <div class="img"></div>
-        <div>
-          <div class="title">키아누리브스</div>
-          <div class="status">Matrics</div>
-        </div>
-      </div>
-      <div class="plus-friends">
-        <span class="title">
-          Plus friend
-        </span>
-        <div class="small-friend">
-          <div class="img"></div>
-          <div>Plus Friend</div>
-        </div>
-      </div>
       <div class="normal-friends">
-        <span class="title">
-          Friends 5
-        </span>
-        <div class="small-friend">
-          <div class="img"></div>
-          <div>
-            <div class="title">메시</div>
-            <div class="status">World God</div>
+        <a href="chat.html">
+          <div class="small-friend">
+            <div class="img"></div>
+            <div>
+              <div class="title">메시</div>
+              <div class="status">World God</div>
+            </div>
+            <div class="date">March 7</div>
           </div>
-          <div class="music">hhooooooo</div>
-        </div>
-        <div class="small-friend">
-          <div class="img"></div>
-          <div>
-            <div class="title">키아누리브스</div>
-            <div class="status">Matrics</div>
-          </div>
-        </div>
-        <div class="small-friend">
-          <div class="img"></div>
-          <div>
-            <div class="title">지성팍</div>
-            <div class="status">Korea God</div>
-          </div>
-        </div>
+        </a>
       </div>
     </div>
 
     <div class="bottom">
-      <i class="fas fa-user-alt"></i>
-      <i class="far fa-comment"></i>
-      <i class="fas fa-search"></i>
-      <i class="fas fa-ellipsis-h"></i>
+      <a href="friends.html">
+        <i class="far fa-user"></i>
+      </a>
+      <a href="index.html">
+        <i class="fas fa-comment"></i>
+        <span class="count">8</span>
+      </a>
+      <a href="find.html">
+        <i class="fas fa-search"></i>
+      </a>
+      <a href="more.html">
+        <i class="fas fa-ellipsis-h"></i>
+      </a>
     </div>
   </div>
   <div class="big-screen">
