--- a/index.html
+++ b/index.html
@@ -43,6 +43,30 @@
             </div>
             <div class="date">March 7</div>
           </div>
+          <div class="small-friend">
+            <div class="img"></div>
+            <div>
+              <div class="title">손흥민</div>
+              <div class="status">Goal</div>
+            </div>
+            <div class="date">Feb 26</div>
+          </div>
+          <div class="small-friend">
+            <div class="img"></div>
+            <div>
+              <div class="title">키아누</div>
+              <div class="status">Matrics</div>
+            </div>
+            <div class="date">Feb 7</div>
+          </div>
+          <div class="small-friend">
+            <div class="img"></div>
+            <div>
+              <div class="title">지성팍</div>
+              <div class="status">legend</div>
+            </div>
+            <div class="date">Jan 7</div>
+          </div>
         </a>
       </div>
     </div>
