--- a/chat.html
+++ b/chat.html
@@ -82,19 +82,12 @@
     </div>
 
     <div class="bottom">
-      <a href="friends.html">
-        <i class="far fa-user"></i>
-      </a>
-      <a href="index.html">
-        <i class="fas fa-comment"></i>
-        <span class="count">8</span>
-      </a>
-      <a href="find.html">
-        <i class="fas fa-search"></i>
-      </a>
-      <a href="more.html">
-        <i class="fas fa-ellipsis-h"></i>
-      </a>
+      <!-- <span> -->
+      <input type="text" placeholder="메세지를 입력하세요.">
+      <!-- </span> -->
+      <span class="icon"><i class="far fa-plus-square"></i></span>
+      <span class="icon"><i class="far fa-smile-wink"></i></span>
+      <span class="icon"><i class="fas fa-microphone"></i></span>
     </div>
   </div>
   <div class="big-screen">
