a tag 기본 css 수정

--- a/chat.html
+++ b/chat.html
@@ -26,7 +26,12 @@
       </span>
     </header>
     <div class="ko__title">
-      <span><i class="fas fa-arrow-left"></i>&nbsp;&nbsp;&nbsp;&nbsp;Best Friend</span>
+      <span>
+        <a href="index.html">
+          <i class="fas fa-arrow-left"></i>
+        </a>
+        &nbsp;&nbsp;&nbsp;&nbsp;Best Friend
+      </span>
       <span>
         <i class="fas fa-search"></i>
         <i class="fas fa-bars"></i>
